force-app/main/default/objects/DocumentRequest__c/DocumentRequest__c.object-meta.xml
<CustomObject>
    <description>Document Request for an application</description>
    <label>Document Request</label>
    <nameField>
        <displayFormat>Doc{0000}</displayFormat>
        <label>Document Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>