force-app/main/default/objects/DocumentRequest__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked Applicant</description>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Document Requests</relationshipLabel>
    <relationshipName>DocumentRequests</relationshipName>
    <type>Lookup</type>
</CustomField>