force-app/main/default/objects/DocumentRequest__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked application</description>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Document Requests</relationshipLabel>
    <relationshipName>DocumentRequests</relationshipName>
    <type>Lookup</type>
</CustomField>