force-app/main/default/objects/DocumentRequest__c/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <description>Content Document Id</description>
    <label>Content Document Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>