force-app/main/default/objects/DocumentRequest__c/fields/DocumentSubType__c.field-meta.xml
<CustomField>
    <fullName>DocumentSubType__c</fullName>
    <description>Document Sub Type</description>
    <label>Document Sub Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DocumentRequestSubType</valueSetName>
    </valueSet>
</CustomField>