force-app/main/default/objects/DocumentRequest__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>DocumentRequests</relationshipLabel>
    <relationshipName>DocumentRequests</relationshipName>
    <type>Lookup</type>
</CustomField>