force-app/main/default/objects/DocumentRequest__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mandatory to upload document</description>
    <inlineHelpText>Mandatory to upload document</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>